--- a/css/quartz.css
+++ b/css/quartz.css
@@ -2,7 +2,10 @@
 /* Color Variables */
 /* Utility Colors */
 /* Heading Sizes */
-html {
+* {
+  box-sizing: border-box; }
+
+body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px; }
 
@@ -120,30 +123,59 @@ html {
   border-width: 1px;
   border-style: solid;
   color: #009edb;
+  cursor: pointer;
   display: inline-block;
+  font-size: 12px;
   line-height: 30px;
   min-height: 30px;
   padding: 0 10px; }
 
+.btn.btn-default {
+  color: black; }
+
 .btn.btn-primary, .btn.btn-success, .btn.btn-success, .btn.btn-warn, .btn.btn-error {
   color: white;
   text-shadow: 0 1px 1px #7f7f7f; }
+
+.btn.btn-default {
+  background-color: white;
+  border-color: #c5c5c5; }
 
 .btn.btn-primary {
   background-color: #44c7f4;
   border-color: #00adef; }
 
 .btn.btn-success {
-  background-color: #1db78d;
+  background-color: #6dc067;
   border-color: #00a76d; }
 
 .btn.btn-warn {
-  background-color: #ffde4f;
-  border-color: #ffd44f; }
+  background-color: #ffee5f;
+  border-color: #f1c641; }
 
 .btn.btn-error {
   background-color: #f3716c;
   border-color: #ed473a; }
+
+.btn.btn-default:hover {
+  background-color: #e2e2e2;
+  border-color: #c5c5c5; }
+
+.btn.btn-primary:hover {
+  background-color: #009edb;
+  border-color: #0d84b1; }
+
+.btn.btn-success:hover {
+  background-color: #4da047;
+  border-color: #0a8147; }
+
+.btn.btn-warn:hover {
+  background-color: #ffd400;
+  border-color: #e0b530; }
+
+.btn.btn-error:hover {
+  background-color: #e4625d;
+  border-color: #cc2619; }
 
 /* /BUTTONS */
 /* HEADINGS */
@@ -230,5 +262,122 @@ dd {
   margin-left: 0px; }
 
 /* /LIST STYLES */
+/* TABLE STYLES */
+.table {
+  border-collapse: collapse;
+  margin-bottom: 15px;
+  width: 100%; }
+
+.table.table-small th {
+  padding: 5px !important; }
+
+.table.table-small td {
+  padding: 5px !important; }
+
+.table th {
+  border-bottom-color: #e5e5e5;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  font-size: 14px;
+  padding: 10px;
+  text-align: left; }
+
+.table td {
+  border-bottom-color: #e5e5e5;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  padding: 10px; }
+
+.table tfoot td {
+  color: #999;
+  font-style: italic; }
+
+.table.table-stripe tbody tr:nth-child(2n-1) {
+  background-color: #fafafa; }
+
+.table.table-bordered {
+  border-color: #e5e5e5;
+  border-style: solid;
+  border-width: 1px; }
+
+/* /TABLE STYLES */
+/* FORM STYLES */
+input {
+  font-family: inherit; }
+
+.form-row {
+  margin-bottom: 15px; }
+
+label {
+  display: inline-block;
+  font-weight: 500;
+  margin-bottom: 5px;
+  max-width: 100%; }
+
+.form-input {
+  border-color: #c5c5c5;
+  border-style: solid;
+  border-width: 1px;
+  font-size: 12px;
+  padding: 7px;
+  width: 100%; }
+
+.form-input:focus {
+  border-color: #44c7f4;
+  box-shadow: 0px 0px 5px -2px #44c7f4; }
+
+.form-input[disabled] {
+  cursor: not-allowed; }
+
+.form-input[disabled], .form-input[readonly] {
+  background-color: #fafafa; }
+
+.form-input.success {
+  background-color: #c0e1c0;
+  border-color: #8dcfad; }
+
+.form-input.error {
+  background-color: #fabeb7;
+  border-color: #f7a19a; }
+
+.checkbox label, .radio label {
+  font-weight: 400; }
+
+/* /FORM STYLES */
+/* ALERT STYLES */
+.alert {
+  background-color: #000;
+  border-style: solid;
+  border-width: 1px;
+  margin-bottom: 10px;
+  padding: 15px;
+  width: 100%; }
+
+.alert.alert-default {
+  background-color: white;
+  border-color: #c5c5c5;
+  color: black; }
+
+.alert.alert-success {
+  background-color: #6dc067;
+  border-color: #00a76d;
+  color: #00672d; }
+
+.alert.alert-info {
+  background-color: #44c7f4;
+  border-color: #00adef;
+  color: #0663a5; }
+
+.alert.alert-warn {
+  background-color: #ffee5f;
+  border-color: #f1c641;
+  color: #a17600; }
+
+.alert.alert-error {
+  background-color: #f3716c;
+  border-color: #ed473a;
+  color: #bd170a; }
+
+/* /ALERT STYLES */
 
 /*# sourceMappingURL=quartz.css.map */
