Moved sass files, updated grunt file
-Moved variables into separate sass file
-Updated grunt file to watch sass files for changes and build
automatically
-Includes build of Quartz

--- a/sass/quartz.scss
+++ b/sass/quartz.scss
@@ -1,80 +1,4 @@
-/* Color Variables */
-$default-color: rgb(255, 255, 255);
-$default-accent: rgb(197, 197, 197);
-
-$primary-color: rgb(68, 199, 244);
-$primary-accent: rgb(0, 173, 239);
-
-$success-color: rgb(109, 192, 103);
-$success-accent: rgb(0, 167, 109);
-
-$info-color: rgb(68, 199, 244);
-$info-accent: rgb(0, 173, 239);
-
-$warn-color: rgb(255, 218, 23);
-$warn-accent: rgb(241, 198, 65);
-
-$error-color: rgb(243, 73, 78);
-$error-accent: rgb(170, 61, 41);
-
-$default-hover-color: rgb(226, 226, 226);
-$default-hover-accent: rgb(200, 200, 200);
-
-$primary-hover-color: rgb(0, 158, 219);
-$primary-hover-accent: rgb(13, 132, 177);
-
-$success-hover-color: rgb(77, 160, 71);
-$success-hover-accent: rgb(10, 129, 71);
-
-$warn-hover-color: rgb(255, 192, 16);
-$warn-hover-accent: rgb(204, 151, 48);
-
-$error-hover-color: rgb(213, 53, 58);
-$error-hover-accent: rgb(145, 41, 13);
-
-$primary-color: rgb(68, 199, 244);
-
-$default-text-color: rgb(0, 0, 0);
-$success-text-color: rgb(0, 103, 45);
-$info-text-color: rgb(6, 99, 165);
-$warn-text-color: rgb(161, 118, 0);
-$error-text-color: rgb(189, 23, 10);
-
-/* Utility Colors */
-$button-default-text-color: rgb(0, 0, 0);
-$button-text-color: rgb(255, 255, 255);
-$red: rgb(237, 71, 58);
-$black: #000;
-$dark-gray: #c5c5c5;
-$med-gray: #e5e5e5;
-$light-gray: #fafafa;
-$white: #fff;
-
-/* Heading Sizes */
-$h1-size: 36px;
-$h2-size: 30px;
-$h3-size: 24px;
-$h4-size: 18px;
-$h5-size: 14px;
-$h6-size: 12px;
-
-$subheading-color: #999;
-$highlight-color: rgb(255, 255, 153);
-
-$form-focus-color: rgb(68, 199, 244);
-$form-success-color: rgb(192, 225, 192);
-$form-success-accent: rgb(141, 207, 173);
-$form-error-color: rgb(250, 190, 183);
-$form-error-accent: rgb(247, 161, 154);
-
-
-/* Shadow Variables */
-$text-shadow: 0 1px 1px rgb(127,127,127);
-$form-shadow: 0px 0px 5px 0px $form-focus-color;
-$form-success-shadow: 0px 0px 5px 0px $form-success-color;
-$form-error-shadow: 0px 0px 5px 0px $form-error-color;
-
-
+@import 'variables';
 
 * {
 	box-sizing: border-box;
