--- a/sass/quartz.scss
+++ b/sass/quartz.scss
@@ -4,544 +4,17 @@
 * MIT Licensed (https://github.com/michael-hamilton/Quartz/blob/master/LICENSE)
 */
 
-//Import core variables
+//Import core variables & reset
 @import 'variables';
-
-* {
-	box-sizing: border-box;
-}
-
-
-html { }
-
-body {
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-size: 14px;
-}
-
-
-
-/* UTILITY CLASSES */
-
-.rounded-corners {
-	border-radius: 4px;
-}
-
-/* /UTILITY CLASSES */
-
-
-/* RESPONSIVE COLUMNS */
-
-.container {
-	position:relative;
-	width:100%;
-	max-width:960px;
-	margin:0 auto;
-	padding:0 20px;
-	box-sizing:border-box;
-}
-
-.row::before, .row::after {
-	clear: both;
-	content: " ";
-	display: table;
-}
-
-.row {
-	margin-left:10px;
-	margin-right:10px;
-}
-
-.col {
-	width:100%;
-	float:left;
-	box-sizing:border-box;
-	padding-left:8px;
-	padding-right: 10px;
-	padding-bottom: 10px;
-	padding-top: 10px;
-}
-
-/* For devices larger than 400px */
-@media (min-width: 400px) {
-	.container {
-		width:85%;
-		padding:0;
-	}
-}
-
-/* For devices larger than 550px */
-@media (min-width: 550px) {
-	.container {
-		width:80%;
-	}
-	
-/* 	Column Widths */
-	.col-1.col {
-		width:8.333333333%;
-	}
-	
-	.col-2.col {
-		width:16.66666667%;
-	}
-	
-	.col-3.col {
-		width:25%;
-	}
-	
-	.col-4.col {
-		width:33.33333333%;
-	}
-	
-	.col-5.col {
-		width:41.66666667%;
-	}
-	
-	.col-6.col {
-		width:50%;
-	}
-	
-	.col-7.col {
-		width:58.33333333%;
-	}
-	
-	.col-8.col {
-		width:66.66666667%;
-	}
-	
-	.col-9.col {
-		width:75%;
-	}
-	
-	.col-10.col {
-		width:83.33333333%;
-	}
-	
-	.col-11.col {
-		width:91.66666667%;
-	}
-	
-	.col-12.col {
-		width:100%;
-	}
-
-	
-	/* Offsets */
-	.col-offset-1.col {
-		margin-left:8.333333333%;
-	}
-	
-	.col-offset-2.col {
-		margin-left:16.66666667%;
-	}
-	
-	.col-offset-3.col {
-		margin-left:25%;
-	}
-	
-	.col-offset-4.col {
-		margin-left:33.33333333%;
-	}
-	
-	.col-offset-5.col {
-		margin-left:41.66666667%;
-	}
-	
-	.col-offset-6.col {
-		margin-left:50%;
-	}
-	
-	.col-offset-7.col {
-		margin-left:58.33333333%;
-	}
-	
-	.col-offset-8.col {
-		margin-left:66.66666667%;
-	}
-	
-	.col-offset-9.col {
-		margin-left:75%;
-	}
-	
-	.col-offset-10.col {
-		margin-left:83.33333333%;
-	}
-	
-	.col-offset-11.col {
-		margin-left:91.66666667%;
-	}
-}
-
-/* /RESPONSIVE COLUMNS */
-
-
-
-/* BUTTONS */
-
-.btn { 
-	border-width: 1px;
-	border-style: solid;
-	color: rgb(0, 158, 219);
-	cursor: pointer;
-	display: inline-block;
-	font-size: 12px;
-	line-height: 24px;
-	min-height:30px;
-	padding: 4px 12px;
-}
-
-.btn.sm { 
-	line-height: 12px;
-	padding: 8px 4px;
-}
-
-.btn.lg { 
-	padding: 8px 16px;
-}
-
-.btn.btn-default {
-	color: $button-default-text-color;
-}
-
-.btn.btn-primary, .btn.btn-success, .btn.btn-success, .btn.btn-warn, .btn.btn-error, .btn.btn-info {
-	color: $button-text-color;
-	text-shadow: $text-shadow;
-}
-
-.btn.btn-default {
-	background-color: $default-color;
-	border-color: $default-accent;
-}
-.btn.btn-primary { 
-	background-color: $primary-color;
-	border-color: $primary-accent;
-}
-.btn.btn-success { 
-	background-color: $success-color;
-	border-color: $success-accent;
-}
-.btn.btn-info { 
-	background-color: $info-color;
-	border-color: $info-accent;
-}
-.btn.btn-warn { 
-	background-color: $warn-color;
-	border-color: $warn-accent;
-}
-.btn.btn-error { 
-	background-color: $error-color;
-	border-color: $error-accent;
-}
-
-.btn.btn-default:hover {
-	background-color: $default-hover-color;
-	border-color: $dark-gray;
-}
-.btn.btn-primary:hover { 
-	background-color: $primary-hover-color;
-	border-color: $primary-hover-accent;
-}
-.btn.btn-success:hover { 
-	background-color: $success-hover-color;
-	border-color: $success-hover-accent;
-}
-.btn.btn-info:hover { 
-	background-color: $info-hover-color;
-	border-color: $info-hover-accent;
-}
-.btn.btn-warn:hover { 
-	background-color: $warn-hover-color;
-	border-color: $warn-hover-accent;
-}
-.btn.btn-error:hover { 
-	background-color: $error-hover-color;
-	border-color: $error-hover-accent;
-}
-
-
-/* /BUTTONS */
-
-
-
-/* HEADINGS */
-
-h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-	font-weight: 400;
-}
-
-h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small, .h2 small, .h3 small, .h4 small, .h5 small, .h6 small {
-	color: $subheading-color;	
-}
-
-h1, .h1 {
-	font-size: $h1-size;
-}
-
-h2, .h2 {
-	font-size: $h2-size;
-}
-
-h3, .h3 {
-	font-size: $h3-size;
-}
-
-h4, .h4 {
-	font-size: $h4-size;
-}
-
-h5, .h5 {
-	font-size: $h5-size;
-}
-
-h6, .h6 {
-	font-size: $h6-size;
-}
-
-/* /HEADINGS */
-
-
-
-/* COPY */
-
-p {
-	margin-bottom: 10px;
-	margin-top: 10px;
-}
-
-em {
-	color: $red;
-}
-
-code {
-	font-family: monospace, serif;
-}
-
-ins, mark {
-	background-color: $highlight-color;
-	text-decoration: none;
-}
-
-q {
-	font-style: italic;
-}
-
-abbr {
-	border-bottom-width: 1px;
-	border-bottom-style: dotted;
-}
-
-small {
-	font-size: 75%;
-}
-
-hr {
-	border-color: $med-gray;
-	border-width: 1px 0 0 0; 
-}
-
-pre {
-	background-color: $light-gray;
-	border-color: $med-gray;
-	border-style: solid;
-	border-width: 1px;
-	padding-top: 10px;
-	padding-right: 10px;
-	padding-bottom: 00px;
-	padding-left: 10px;
-	white-space: pre-wrap;
-}
-
-
-/* /COPY */
-
-
-
-/* LIST STYLES */
-
-ul ul, ol ol, ul ol, ol ul, ul li, ol li {
-	margin-left: -6px;
-}
-
-.list-unstyled {
-	list-style: none;
-}
-
-dt {
-	font-weight: 500;
-}
-
-dd {
-	margin-left: 0px;
-}
-
-/* /LIST STYLES */
-
-
-
-/* TABLE STYLES */
-
-.table {
-	border-collapse: collapse;
-	margin-bottom: 15px;
-	width: 100%;
-}
-
-.table.table-small th {
-	padding: 5px !important;
-}
-
-.table.table-small td {
-	padding: 5px !important;
-}
-
-.table tr {
-	
-}
-
-.table th {
-	border-bottom-color: $med-gray;
-	border-bottom-style: solid;
-	border-bottom-width: 1px;
-	font-size: 14px;
-	padding: 10px;
-	text-align: left;
-}
-
-.table td {
-	border-bottom-color: $med-gray;
-	border-bottom-style: solid;
-	border-bottom-width: 1px;
-	padding: 10px;
-}
-
-.table tfoot td {
-	color: $subheading-color;
-	font-style: italic;
-}
-
-.table.table-stripe tbody tr:nth-child(2n-1) {
-	background-color: $light-gray;
-}
-
-.table.table-bordered {
-	border-color: $med-gray;
-	border-style: solid;
-	border-width: 1px;
-}
-
-/* /TABLE STYLES */
-
-
-
-/* FORM STYLES */
-
-input {
-	font-family: inherit;
-}
-
-.form-row {
-	margin-bottom: 15px;
-}
-
-label {
-	display: inline-block;
-	font-weight: 500;
-	margin-bottom: 5px;
-	max-width: 100%;
-}
-
-.form-input {
-	border-color: $dark-gray;
-	border-style: solid;
-	border-width: 1px;
-	font-size: 12px;
-	padding: 7px;
-	width: 100%;
-}
-
-.form-input:focus {
-	border-color: $form-focus-color;
-	box-shadow: 0px 0px 5px 0px #44c7f4;
-}
-
-.form-input[disabled]{
-	cursor: not-allowed;	
-}
-
-.form-input[disabled], .form-input[readonly] {
-	background-color: $light-gray;
-}
-
-.form-input.success {
-	background-color: $form-success-color;
-	border-color: $form-success-accent;
-}
-
-.form-input.error {
-	background-color: $form-error-color;
-	border-color: $form-error-accent;
-}
-
-.form-input.success:focus {
-	box-shadow: 0px 0px 5px 0px $form-success-color;
-}
-
-.form-input.error:focus {
-	box-shadow: 0px 0px 5px 0px $form-error-color;
-}
-
-.checkbox label, .radio label {
-	font-weight: 400;
-}
-
-.checkbox input, .radio input {
-	
-}
-
-/* /FORM STYLES */
-
-
-
-
-/* ALERT STYLES */
-
-.alert { 
-	background-color: #000;
-	border-style: solid;
-	border-width: 1px;
-	margin-bottom: 10px;
-	padding: 15px;
-	width: 100%;
-}
-
-.alert.alert-default {
-	background-color: $default-color;
-	border-color: $default-accent;
-	color: $default-text-color;
-}
-
-.alert.alert-success {
-	background-color: lighten($success-color, 20%);
-	border-color: lighten($success-accent, 20%);
-	color: $success-text-color;
-}
-
-.alert.alert-info {
-	background-color: lighten($info-color, 20%);
-	border-color: lighten($info-accent, 20%);
-	color: $info-text-color;
-}
-
-.alert.alert-warn {
-	background-color: lighten($warn-color, 20%);
-	border-color: lighten($warn-accent, 20%);
-	color: $warn-text-color;
-}
-
-.alert.alert-error {
-	background-color: lighten($error-color, 20%);
-	border-color: lighten($error-accent, 20%);
-	color: $error-text-color;
-}
-
-/* /ALERT STYLES */
+@import 'reset';
+
+//Import core
+@import 'copy';
+@import 'grid';
+@import 'utility';
+
+//Import components
+@import 'alerts';
+@import 'buttons';
+@import 'forms';
+@import 'tables';
