--- a/sass/tables.scss
+++ b/sass/tables.scss
@@ -1,53 +1,62 @@
-
-/* TABLE STYLES */
+//Table styles
 
 .table {
 	border-collapse: collapse;
 	margin-bottom: 15px;
 	width: 100%;
-}
 
-.table.table-small th {
-	padding: 5px !important;
-}
+	th {
+		border-bottom-color: $light-gray;
+		border-bottom-style: solid;
+		border-bottom-width: 1px;
+		font-size: 14px;
+		padding: 10px;
+		text-align: left;
+	}
 
-.table.table-small td {
-	padding: 5px !important;
-}
+	tr {
+		&:not(:last-child) {
+			td {
+				border-bottom-color: $light-gray;
+				border-bottom-style: solid;
+				border-bottom-width: 1px;
+			}
+		}
+	}
 
-.table tr {
-	
-}
+	td {
+		padding: 10px;
+	}
 
-.table th {
-	border-bottom-color: $med-gray;
-	border-bottom-style: solid;
-	border-bottom-width: 1px;
-	font-size: 14px;
-	padding: 10px;
-	text-align: left;
-}
+	tfoot {
+		td {
+			color: $med-gray;
+			border-top-color: $light-gray;
+			border-top-style: solid;
+			border-top-width: 1px;
+			font-style: italic;
+		}
+	}
 
-.table td {
-	border-bottom-color: $med-gray;
-	border-bottom-style: solid;
-	border-bottom-width: 1px;
-	padding: 10px;
-}
+	&.table-stripe {
+		tbody tr:nth-child(2n-1) {
+			background-color: $lighter-gray;
+		}
+	}
 
-.table tfoot td {
-	color: $subheading-color;
-	font-style: italic;
-}
+	&.table-bordered {
+		border-color: $dark-gray !important;
+		border-style: solid;
+		border-width: 1px !important;
+	}
 
-.table.table-stripe tbody tr:nth-child(2n-1) {
-	background-color: $light-gray;
-}
+	&.table-small {
+		th {
+			padding: 5px !important;
+		}
 
-.table.table-bordered {
-	border-color: $med-gray;
-	border-style: solid;
-	border-width: 1px;
+		td {
+			padding: 5px !important;
+		}
+	} 
 }
-
-/* /TABLE STYLES */
