--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,57 +1,25 @@
+// Variables
 
+// Base colors
+$base: #000000;
+$darker-gray: lighten($base, 10%);
+$dark-gray: lighten($base, 30%);
+$med-gray: lighten($base, 50%);
+$light-gray: lighten($base, 70%);
+$lighter-gray: lighten($base, 90%);
+$white: lighten($base, 100%);
 
-/* Color Variables */
+// Contextual colors
 $default-color: rgb(255, 255, 255);
-$default-accent: darken($default-color, 15%);
-
 $primary-color: rgb(29, 109, 242);
-$primary-accent: darken($primary-color, 15%);
-
 $success-color: rgb(109, 192, 103);
-$success-accent: darken($success-color, 15%);
-
 $info-color: rgb(68, 199, 244);
-$info-accent: darken($info-color, 15%);
-
 $warn-color: rgb(249, 222, 59);
-$warn-accent: darken($warn-color, 15%);
-
 $error-color: rgb(217, 83, 79);
-$error-accent: darken($error-color, 15%);
 
-$default-hover-color: darken($default-color, 15%);
-$default-hover-accent: darken($default-color, 30%);
-
-$primary-hover-color: darken($primary-color, 15%);
-$primary-hover-accent: darken($primary-color, 30%);
-
-$success-hover-color: darken($success-color, 15%);
-$success-hover-accent: darken($success-color, 30%);
-
-$info-hover-color: darken($info-color, 15%);
-$info-hover-accent: darken($info-color, 30%);
-
-$warn-hover-color: darken($warn-color, 15%);
-$warn-hover-accent: darken($warn-color, 30%);
-
-$error-hover-color: darken($error-color, 15%);
-$error-hover-accent: darken($error-color, 30%);
-
-$default-text-color: darken($default-color, 50%);
-$success-text-color: darken($success-color, 30%);
-$info-text-color: darken($info-color, 30%);
-$warn-text-color: darken($warn-color, 30%);
-$error-text-color: darken($error-color, 30%);
-
-/* Utility Colors */
-$button-default-text-color: rgb(0, 0, 0);
-$button-text-color: rgb(255, 255, 255);
-$red: rgb(237, 71, 58);
-$black: #000;
-$dark-gray: #c5c5c5;
-$med-gray: #e5e5e5;
-$light-gray: #fafafa;
-$white: #fff;
+//Other colors
+$form-focus-color: rgb(68, 199, 244);
+$highlight-color: rgb(255, 255, 153);
 
 /* Heading Sizes */
 $h1-size: 36px;
@@ -61,18 +29,5 @@ $h4-size: 18px;
 $h5-size: 14px;
 $h6-size: 12px;
 
-$subheading-color: #999;
-$highlight-color: rgb(255, 255, 153);
-
-$form-focus-color: rgb(68, 199, 244);
-$form-success-color: rgb(192, 225, 192);
-$form-success-accent: rgb(141, 207, 173);
-$form-error-color: rgb(250, 190, 183);
-$form-error-accent: rgb(247, 161, 154);
-
-
 /* Shadow Variables */
-$text-shadow: 0 1px 1px rgb(127,127,127);
-$form-shadow: 0px 0px 5px 0px $form-focus-color;
-$form-success-shadow: 0px 0px 5px 0px $form-success-color;
-$form-error-shadow: 0px 0px 5px 0px $form-error-color;
+$text-shadow: 0 1px 1px $dark-gray;
