--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,13 +1,12 @@
 // Variables
 
 // Base colors
-$base: #000000;
-$darker-gray: lighten($base, 10%);
-$dark-gray: lighten($base, 30%);
-$med-gray: lighten($base, 50%);
-$light-gray: lighten($base, 70%);
-$lighter-gray: lighten($base, 90%);
-$white: lighten($base, 100%);
+$base-color: #000000;
+$darker-gray: lighten($base-color, 10%);
+$dark-gray: lighten($base-color, 30%);
+$med-gray: lighten($base-color, 50%);
+$light-gray: lighten($base-color, 70%);
+$lighter-gray: lighten($base-color, 90%);
 
 // Contextual colors
 $default-color: rgb(255, 255, 255);
@@ -21,13 +20,15 @@ $error-color: rgb(217, 83, 79);
 $form-focus-color: rgb(68, 199, 244);
 $highlight-color: rgb(255, 255, 153);
 
-/* Heading Sizes */
-$h1-size: 36px;
-$h2-size: 30px;
-$h3-size: 24px;
-$h4-size: 18px;
-$h5-size: 14px;
-$h6-size: 12px;
+// Font Sizes
+$base-font-size: 14px;
 
-/* Shadow Variables */
+$h1-size: floor($base-font-size * 2.57); // 36px
+$h2-size: floor($base-font-size * 2.15); // 30px
+$h3-size: ceil($base-font-size * 1.71); // 24px
+$h4-size: floor($base-font-size * 1.29); // 18px
+$h5-size: $base-font-size * 1.00; // 14px
+$h6-size: ceil($base-font-size * 0.85); // 12px
+
+// Shadow Variables
 $text-shadow: 0 1px 1px $dark-gray;
