Updated tables, grid, variables and docs
Updated tables to target the table element, not just tables with .table
class.  Also added .table-hover class to apply hover states to tables.
Updated color variables a bit.
Updated docs to reflect some changes

--- a/sass/forms.scss
+++ b/sass/forms.scss
@@ -20,12 +20,13 @@ label {
 	border-color: $light-gray;
 	border-style: solid;
 	border-width: 1px;
+	display: block;
 	font-size: 13px;
 	height: 28px;
 	padding: 0px 6px;
 	width: 100%;
 
-	&[disabled]{
+	&[disabled] {
 		cursor: not-allowed;	
 	}
 
