--- a/sass/tables.scss
+++ b/sass/tables.scss
@@ -1,6 +1,6 @@
 //Table styles
 
-.table {
+table, .table {
 	border-collapse: collapse;
 	margin-bottom: 15px;
 	width: 100%;
@@ -8,7 +8,7 @@
 	th {
 		border-bottom-color: $light-gray;
 		border-bottom-style: solid;
-		border-bottom-width: 1px;
+		border-bottom-width: 2px;
 		font-size: 14px;
 		padding: 10px;
 		text-align: left;
@@ -45,18 +45,24 @@
 	}
 
 	&.table-bordered {
-		border-color: $dark-gray !important;
+		border-color: $light-gray;
 		border-style: solid;
-		border-width: 1px !important;
+		border-width: 1px;
+	}
+
+	&.table-hover {
+		tbody tr:hover {
+			background-color: lighten($lighter-gray, 3%);
+		}
 	}
 
 	&.table-small {
 		th {
-			padding: 5px !important;
+			padding: 5px;
 		}
 
 		td {
-			padding: 5px !important;
+			padding: 5px;
 		}
 	} 
 }
