--- a/sass/utility.scss
+++ b/sass/utility.scss
@@ -3,3 +3,15 @@
 .rounded-corners {
 	border-radius: 4px;
 }
+
+.pull-left {
+	float: left;
+}
+
+.pull-right {
+	float: right;
+}
+
+.clear {
+	clear: both;
+}
