--- a/sass/quartz-full.scss
+++ b/sass/quartz-full.scss
@@ -12,11 +12,11 @@
 //Import core
 @import 'base';
 @import 'copy';
+@import 'forms';
 @import 'grid';
+@import 'tables';
 @import 'utility';
 
 //Import components
 @import 'modules/alerts';
 @import 'modules/buttons';
-@import 'modules/forms';
-@import 'modules/tables';
