--- a/sass/base.scss
+++ b/sass/base.scss
@@ -3,6 +3,6 @@ html {
 }
 
 body {
-	font-family: "Helvetica Neue", Helvetica, sans-serif;
+	font-family: 'Lato', 'Helvetica', sans-serif;
 	font-size: $base-font-size;
 }
