--- a/sass/grid.scss
+++ b/sass/grid.scss
@@ -25,118 +25,38 @@
 	float:left;
 	box-sizing:border-box;
 	padding-left:8px;
-	padding-right: 10px;
-	padding-bottom: 10px;
-	padding-top: 10px;
+	padding-right: 8px;
+	padding-bottom: 5px;
+	padding-top: 5px;
 }
 
-/* For devices larger than 400px */
-@media (min-width: 400px) {
-	.container {
-		width:85%;
-		padding:0;
-	}
+/* For devices smaller than 768px */
+.container {
+	width:80%;
+}
+	
+.col.small, .col.phone {
+	@include make-grid();
 }
 
-/* For devices larger than 550px */
+/* For devices equal to or larger than 768px */
 @media (min-width: 768px) {
 	.container {
 		width:80%;
 	}
 	
-/* 	Column Widths */
-	.col{
-		&.col-1 {
-			width:8.333333333%;
-		}
-		
-		&.col-2 {
-			width:16.66666667%;
-		}
-		
-		&.col-3 {
-			width:25%;
-		}
-		
-		&.col-4 {
-			width:33.33333333%;
-		}
-		
-		&.col-5 {
-			width:41.66666667%;
-		}
-		
-		&.col-6 {
-			width:50%;
-		}
-		
-		&.col-7 {
-			width:58.33333333%;
-		}
-		
-		&.col-8 {
-			width:66.66666667%;
-		}
-		
-		&.col-9 {
-			width:75%;
-		}
-		
-		&.col-10 {
-			width:83.33333333%;
-		}
-		
-		&.col-11 {
-			width:91.66666667%;
-		}
-		
-		&.col-12 {
-			width:100%;
-		}
+	.col.medium, .col.tablet {
+		@include make-grid();
+	}
+}
 
-		/* Offsets */
-		&.col-offset-1 {
-			margin-left:8.333333333%;
-		}
-		
-		&.col-offset-2 {
-			margin-left:16.66666667%;
-		}
-		
-		&.col-offset-3 {
-			margin-left:25%;
-		}
-		
-		&.col-offset-4 {
-			margin-left:33.33333333%;
-		}
-		
-		&.col-offset-5 {
-			margin-left:41.66666667%;
-		}
-		
-		&.col-offset-6 {
-			margin-left:50%;
-		}
-		
-		&.col-offset-7 {
-			margin-left:58.33333333%;
-		}
-		
-		&.col-offset-8 {
-			margin-left:66.66666667%;
-		}
-		
-		&.col-offset-9 {
-			margin-left:75%;
-		}
-		
-		&.col-offset-10 {
-			margin-left:83.33333333%;
-		}
-		
-		&.col-offset-11 {
-			margin-left:91.66666667%;
-		}
+/* For devices equal to or larger than 992px */
+@media (min-width: 992px) {
+	.container {
+		width:80%;
+	}
+
+	.col.large, .col.desktop {
+		@include make-grid();
 	}
 }
